# omwhisper

./: .env.example  .gitignore  BETA_INSTALL.md  BETA_NOTES.md  CLAUDE.md  CLAUDE_CODE_PROMPTS.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  skills-lock.json  vite.config.ts
.agents/skills/commit-elegant/: SKILL.md
.agents/skills/commit-push-elegant/: SKILL.md
.agents/skills/pull-request-elegant/: SKILL.md
.claude/: settings.json  settings.local.json
.claude/skills/: commit-elegant  commit-push-elegant  pull-request-elegant
.github/: FUNDING.yml
.github/workflows/: build-macos.yml  build-windows.yml
.superpowers/brainstorm/47435-1773638736/: .server-info  .server-stopped  nav-architecture.html  transcribe-layouts.html  unified-home-design.html
docs/: ARCHITECTURE.md  PROJECT_BLUEPRINT.md  PROMPT_LIVE_DICTATION.md  PROMPT_LIVE_TEXT_STREAMING.md  PRO_REVERT_GUIDE.md  SETUP_GUIDE.md  WEBAPP_BETA_TASKS.md  WEBAPP_INSTALL_PAGE.md  WINDOWS_DEV_SETUP.md  _config.yml  in-app-auto-update-plan.md  index.md  recording-modes.md  shortcuts.md  smart-dictation.md  troubleshooting.md
docs/prompts/: CLAUDE_CODE_PROMPTS.md  omwhisper-dictation-pipeline-prompt.md
docs/superpowers/plans/: 2026-03-16-ai-models-unified-tab.md  2026-03-16-built-in-llm-backend.md  2026-03-16-unified-home-tab.md  2026-03-16-ux-improvements.md  2026-03-17-ai-polish-regular-recording.md  2026-03-17-analytics-crash-reporting.md  2026-03-17-home-cleanup-toggle.md  2026-03-17-home-tips-section.md  2026-03-17-silero-vad.md  2026-03-17-vad-engine-selector.md  2026-03-17-windows-support-sub1-paste.md  2026-03-17-windows-support-sub2-ptt.md  2026-03-17-windows-support-sub3-llm.md  2026-03-17-windows-support-sub4-build-pipeline.md  2026-03-17-windows-support-sub5-whisper.md  2026-03-18-apple-speech-analyzer.md  2026-03-18-dark-glassmorphism-theme.md  2026-03-20-beta5.md  2026-03-20-smart-dictation-backend-ui-redesign.md  2026-04-05-light-dark-theme.md
docs/superpowers/specs/: 2026-03-16-ai-models-unified-tab-design.md  2026-03-16-built-in-llm-backend-design.md  2026-03-16-unified-home-tab-design.md  2026-03-16-ux-improvements-design.md  2026-03-17-ai-polish-regular-recording-design.md  2026-03-17-analytics-crash-reporting-design.md  2026-03-17-home-cleanup-toggle-design.md  2026-03-17-home-tips-section-design.md  2026-03-17-silero-vad-design.md  2026-03-17-vad-engine-selector-design.md  2026-03-17-windows-support-sub1-paste-design.md  2026-03-17-windows-support-sub2-ptt-design.md  2026-03-17-windows-support-sub3-llm-design.md  2026-03-17-windows-support-sub4-build-pipeline-design.md  2026-03-17-windows-support-sub5-whisper-design.md  2026-03-18-apple-speech-analyzer-design.md  2026-03-18-dark-glassmorphism-theme-design.md  2026-03-20-beta5-design.md  (+2 more)
landing/: omwhisper-landing.jsx
scripts/: build-release.sh  generate_icons.py  generate_sounds.py  notarize.sh  setup-moonshine-sdk.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  commands.rs  engine.rs  fn_key.rs  history.rs  lib.rs  main.rs  paste.rs  settings.rs  sounds.rs  styles.rs  updater.rs
src-tauri/src/ai/: cloud.rs  llm.rs  mod.rs  ollama.rs
src-tauri/src/audio/: capture.rs  mod.rs  vad.rs
src-tauri/src/license/: mod.rs  validator.rs
src-tauri/src/macos/: mod.rs  speech_analyzer.rs  speech_analyzer.swift
src-tauri/src/moonshine/: engine.rs  ffi.rs  mod.rs  models.rs
src-tauri/src/parakeet/: engine.rs  models.rs
src-tauri/src/whisper/: engine.rs  models.rs
src-tauri/tests/: parakeet_spike.rs
src/components/: AiModelsView.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  HomeView.tsx  License.tsx  LicenseActivation.tsx  ModelManager.tsx  Onboarding.tsx  OverlayWindow.tsx  Settings.tsx  Sidebar.tsx  StatsCard.test.tsx  StatsCard.tsx  TipsSection.test.tsx  TipsSection.tsx  TranscribeView.tsx  TranscriptionHistory.tsx  TranscriptionView.tsx  Vocabulary.tsx
src/hooks/: useTheme.ts  useToast.ts  useTranscription.ts
src/stores/: appStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: logger.ts  storageKeys.ts
(+2 files in other folders)
