[package]
name = "omwhisper"
version = "0.1.0"
description = "OmWhisper — AI transcription app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "omwhisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
cpal = "0.15"
whisper-rs = { version = "0.14", features = ["metal"] }
llama-cpp-2 = { version = "0.1.138", features = ["metal"] }
hound = "3.5"
reqwest = { version = "0.12", features = ["stream", "json"] }
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
dirs = "5"
arboard = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "2"
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-opener = "2"
regex = "1"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
sysinfo = { version = "0.30", default-features = true }
