[package]
name = "omwhisper"
version = "0.1.0-beta.3"
description = "OmWhisper — AI transcription app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "omwhisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
dotenvy = "0.15"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
cpal = "0.15"
whisper-rs = { version = "0.14" }
hound = "3.5"
reqwest = { version = "0.12", features = ["stream", "json"] }
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
dirs = "5"
arboard = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "2"
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-opener = "2"
regex = "1"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
sysinfo = { version = "0.30", default-features = true }
ndarray = "0"
sentry = { version = "0.47", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
sentry-anyhow = "0.47"

[target.'cfg(not(target_os = "macos"))'.dependencies]
# Silero VAD uses ORT (ONNX Runtime). On macOS 26+ ORT's global destructors crash with
# ARM PAC violation — gate it to non-macOS. macOS uses RMS VAD; Apple Speech handles its
# own voice activity detection internally.
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse"] }
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1.138", features = ["metal"] }
# whisper-rs base dep is in [dependencies] (CPU-only, all platforms).
# This entry adds the Metal GPU feature on macOS only. Cargo unions both.
# Do NOT remove the base entry from [dependencies] — that would break Windows.
whisper-rs = { version = "0.14", features = ["metal"] }
